# agentive

./: .gitignore  run_hfs.py
hfs/: __init__.py  pyproject.toml
hfs/agno/: __init__.py  models.py  providers.py
hfs/cli/: __init__.py  main.py
hfs/config/: default.yaml
hfs/core/: __init__.py  arbiter.py  config.py  emergent.py  escalation_tracker.py  model_selector.py  model_tiers.py  negotiation.py  orchestrator.py  pressure.py  spec.py  triad.py
hfs/events/: __init__.py  bus.py  models.py  otel_bridge.py  stream.py
hfs/export/: __init__.py  json_export.py  json_import.py  markdown.py  migration.py
hfs/integration/: __init__.py  merger.py  renderer.py  validator.py
hfs/observability/: __init__.py  config.py  metrics.py  tracing.py
hfs/persistence/: __init__.py  checkpoint.py  engine.py  models.py  repository.py
hfs/plugins/: __init__.py  discovery.py  hooks.py  manager.py  permissions.py
hfs/presets/: __init__.py  consensus.py  dialectic.py  hierarchical.py  triad_factory.py
hfs/state/: __init__.py  manager.py  models.py  query.py
hfs/tests/: __init__.py  conftest.py  test_agno_providers.py  test_agno_teams_base.py  test_config.py  test_consensus_agno_triad.py  test_dialectic_agno_triad.py  test_hfs_toolkit.py  test_hierarchical_agno_triad.py  test_integration.py  test_negotiation.py  test_observability_agents.py  test_observability_orchestrator.py  test_pressure.py  test_shared_state.py  test_spec.py  test_triad.py
hfs/triads/: __init__.py
hfs/tui/: __init__.py  app.py  theme.py
hfs/user_config/: __init__.py  loader.py  models.py
(+181 files in other folders)
